--- a/exercice.css
+++ b/exercice.css
@@ -1,30 +1,4 @@
-h1 {
-    color:red;
-    font-size: large;
-    text-align: center;
-}
-h2 {
-    color: blue;
-    font-size:medium
-}
-#contenu{
-     background-color:grey;
-}
-strong{
-    color:yellowgreen ;
-    font-weight: 100;
-}
-em{
-    color:orange;
-    text-decoration: underline;
-    font-size: x-large;
-    font-style: normal;
-}
-#contenu2{
-    background-color: pink;
-}
-#titre{
-    color:green;
-    text-align:right;
-    text-decoration: underline;
+table{border-style: solid;
+    border-color:black;
+    border-collapse: collapse;
 }
